--- a/012/resume.html
+++ b/012/resume.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8">
     <title>个人简历</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="//at.alicdn.com/t/font_1040415_yqsss7qxqc.js"></script>
-    <style type="text/css">
-        .icon {
-           width: 1em; height: 1em;
-           vertical-align: -0.15em;
-           fill: currentColor;
-           overflow: hidden;
-        }
-    </style>
+    <script src="https://at.alicdn.com/t/font_1040415_yqsss7qxqc.js"></script>
 </head>
 <body>
 
