--- a/012/bagua.html
+++ b/012/bagua.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./shape.css">
 </head>
 <body>
-    <div class="bagua">
+    <div id="bagua">
         <div id="yin-yang">
             
         </div>
