--- a/012/resume.html
+++ b/012/resume.html
@@ -81,7 +81,7 @@
             </footer>
         </div>
     
-        <a class="button" href="#">下载 PDF 简历</a>
+        <a class="downloadResume" href="./imgs/resume.txt" target="_blank" download>下载PDF简历</a>
     
         <p>
             孙悟空， 资深前端工程师，资深前端讲师，现在在 花果山 教前端课程。<br>
