--- a/012/yinyang.html
+++ b/012/yinyang.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>我会动哦</title>
+    <title>我会转哦</title>
     <link rel="stylesheet" href="./shape.css">
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 </head>
