--- a/012/resume.html
+++ b/012/resume.html
@@ -97,43 +97,43 @@
             <li>
                 <h3>HTML 5 &amp; CSS 3</h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 33.3%"></div>
                 </div>
             </li>
             <li>
                 <h3>JavaScript</h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 43.3%"></div>
                 </div>
             </li>
             <li>
                 <h3>jQuery</h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 53.3%"></div>
                 </div>
             </li>
             <li>
                 <h3>Vue</h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 63.3%"></div>
                 </div>
             </li>
             <li>
                 <h3>React</h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 73.3%"></div>
                 </div>
             </li>
             <li>
                 <h3>HTTP</h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width: 83.3%"></div>
                 </div>
             </li>
         </ol>
     </section>
         
-    <section>
+    <section class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol>
