--- a/012/resume.html
+++ b/012/resume.html
@@ -136,11 +136,14 @@
     <section class="portfolio">
         <h2>作品集</h2>
         <nav>
-            <ol>
-            <li>所有</li>
-            <li>框架</li>
-            <li>原生JS&amp;CSS</li>
+            <ol class="clearfix">
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生JS&amp;CSS</li>
             </ol>
+            <div id="portfolioBar" class="bar state-1">
+                <div class="bar-inner"></div>
+            </div>
         </nav>
     
         <div class="jobs">
@@ -149,5 +152,6 @@
             <div class="small"></div>
         </div>
     </section>
+    <script src="./script.js"></script>
 </body>
 </html>
