--- a/012/resume.html
+++ b/012/resume.html
@@ -146,10 +146,16 @@
             </div>
         </nav>
     
-        <div class="jobs">
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
+        <div class="works">
+            <div class="big">
+                <img src="./imgs/1.jpg" alt="">
+            </div>
+            <div class="smallRU">
+                <img src="./imgs/2.jpg" alt="">
+            </div>
+            <div class="smallRD">
+                <img src="./imgs/3.jpg" alt="">
+            </div>
         </div>
     </section>
     <script src="./script.js"></script>
