--- a/019/index.html
+++ b/019/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="canvas"></div>
+    <canvas id="canvas" width="300px" height="300px"></canvas>
     <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
