--- a/019/index.html
+++ b/019/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <canvas id="canvas" width="300px" height="300px"></canvas>
+    <button id="eraser">Eraser</button>
     <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
