--- a/019/index.html
+++ b/019/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <canvas id="canvas" width="300px" height="300px"></canvas>
-    <button id="eraser">Eraser</button>
+    <div id="actions" class="actions">
+        <button id="eraser">Eraser</button>
+        <button id="brush">Brush</button>
+    </div>
+        
     <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
