--- a/019/index.html
+++ b/019/index.html
@@ -22,6 +22,11 @@
             <use xlink:href="#icon-CloudDownload"></use>
         </svg>
     </div>
+    <ol class="colors">
+        <li id="red" class="red"></li>
+        <li id="yellow" class="yellow"></li>
+        <li id="green" class="green"></li>
+    </ol>
         
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript"src="https://at.alicdn.com/t/font_1062333_ghwsgiosfo.js"></script>
