--- a/025/resume.html
+++ b/025/resume.html
@@ -24,11 +24,11 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">关于</a>
+                        <a href="#siteAbout">关于</a>
                     </li>
-                    <li><a href="#">技能</a></li>
+                    <li><a href="#siteSkills">技能</a></li>
                     <li>
-                        <a href="#">作品</a>
+                        <a href="#siteWorks">作品</a>
                         <ul class="subMenu">
                             <li>作品1</li>
                             <li>作品2</li>
@@ -56,7 +56,7 @@
     </div>
 
     <main>
-        <div class="userCard">
+        <div id="siteAbout" class="userCard">
             <div class="pictureAndText clearfix">
                 <div class="picture">
                     <img src="./imgs/avatar.jpg" alt="头像">
@@ -113,7 +113,7 @@
         </p>
     </main>
 
-    <section class="skills">
+    <section id="siteSkills" class="skills">
         <h2>专业技能</h2>
         <ol class="clearfix">
             <li>
@@ -155,7 +155,7 @@
         </ol>
     </section>
         
-    <section class="portfolio">
+    <section id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix">
