--- a/025/resume.html
+++ b/025/resume.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
     <script src="https://at.alicdn.com/t/font_1040415_yqsss7qxqc.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.3.0/Tween.min.js"></script>
 </head>
 <body>
     <div id="siteLoading" class="site-loading active">
