--- a/025/resume.html
+++ b/025/resume.html
@@ -57,7 +57,7 @@
     </div>
 
     <main>
-        <div id="siteAbout" class="userCard">
+        <div data-x id="siteAbout" class="userCard">
             <div class="pictureAndText clearfix">
                 <div class="picture">
                     <img src="./imgs/avatar.jpg" alt="头像">
@@ -114,7 +114,7 @@
         </p>
     </main>
 
-    <section id="siteSkills" class="skills">
+    <section data-x id="siteSkills" class="skills">
         <h2>专业技能</h2>
         <ol class="clearfix">
             <li>
@@ -156,7 +156,7 @@
         </ol>
     </section>
         
-    <section id="siteWorks" class="portfolio">
+    <section data-x id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix">
