--- a/025/resume.html
+++ b/025/resume.html
@@ -183,7 +183,7 @@
     </section>
 
     <script>
-        setTimeout(function(){siteLoading.classList.remove("active")},1500);
+       let timer =  setTimeout(function(){siteLoading.classList.remove("active")},1000);
     </script>
     <script src="./script.js"></script>
 </body>
