--- a/029/index.html
+++ b/029/index.html
@@ -14,5 +14,7 @@
     </ul>
 
     <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="work.js"></script>
+
 </body>
 </html>
