--- a/029/index.html
+++ b/029/index.html
@@ -13,7 +13,7 @@
         <li id="item5">li--5</li>
     </ul>
 
-    <script type="text/javascript" src="jquery.js"></script>
+    <!-- <script type="text/javascript" src="jquery.js"></script> -->
     <script type="text/javascript" src="work.js"></script>
 
 </body>
