--- a/030/index.html
+++ b/030/index.html
@@ -25,6 +25,7 @@
         }
 
         button {
+            color: white;
             border-radius: 50%;
             border: none;
             outline: none;
@@ -36,7 +37,10 @@
             transform: rotate(25deg);
         }
 
-        
+        .active {
+            color: black;
+        }
+
     </style>
 </head>
 <body>
@@ -51,7 +55,7 @@
             <img src="imgs/cat6.png" alt="">
         </div>
         <div class="buttons">
-            <button>1</button>
+            <button class="active">1</button>
             <button>2</button>
             <button>3</button>
             <button>4</button>
@@ -59,8 +63,6 @@
             <button>6</button>
         </div>
     </div>
-
-
 
     <script type="text/javascript" src="jquery-3.3.1.slim.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
