--- a/031/index.html
+++ b/031/index.html
@@ -17,10 +17,10 @@
         </div>
     </div>
     <div class="switch">
-        <svg class="icon" aria-hidden="true">
+        <svg class="icon" aria-hidden="true" id="previous">
             <use xlink:href="#icon-left"></use>
         </svg>
-        <svg class="icon" aria-hidden="true">
+        <svg class="icon" aria-hidden="true" id="next">
             <use xlink:href="#icon-right1"></use>
         </svg>
     </div>
