--- a/033/carousel.html
+++ b/033/carousel.html
@@ -86,7 +86,7 @@
     <script>
         let $buttons = $("#btns > button");
         let $slides = $("#slides");
-        let count = 0;
+        let current = 0;
 
         makeImgs();
         $slides.css({transform: "translateX(-500px)"});
@@ -103,45 +103,51 @@
         }
 
         function bindEvents() {
-
-            // $("#btns").on("click", "button", (e) => {
-            //     let $btn = $(e.currentTarget);
-            //     let index = $btn.index();
-            //     if(current === 0 && index === ) {   //first -> last
-
-            //     } else if() {   //  last -> first
-
-            //     } else {
-            //         $slides.css({transform: `translateX(${-(index + 1) * 500}px)`});
-            //     }
-            // });
-
-            $buttons.eq(0).on("click", () => {
-                if(count === 2) {
-                    $slides.css({transform: "translateX(-2000px)"}).one("transitionend", () => {
+            $("#btns").on("click", "button", (e) => {
+                let $btn = $(e.currentTarget);
+                let index = $btn.index();
+                if(current === 0 && index === $buttons.length - 1) {   //first -> last
+                    $slides.css({transform: `translateX(0px)`}).one("transitionend", () => {
+                        $slides.hide().offset();
+                        $slides.css({transform: `translateX(${-($buttons.length) * 500}px)`}).show();
+                    });
+                } else if(current === $buttons.length - 1 && index === 0) {   //  last -> first
+                    $slides.css({transform: `translateX(${-($buttons.length + 1) * 500}px)`}).one("transitionend", (e) => {
                         $slides.hide().offset();
                         $slides.css({transform: "translateX(-500px)"}).show();
                     });
                 } else {
-                    $slides.css({transform: "translateX(-500px)"});
+                    $slides.css({transform: `translateX(${-(index + 1) * 500}px)`});
                 }
-                count = 0;
+                current = index;
             });
-            $buttons.eq(1).on("click", () => {
-                $slides.css({transform: "translateX(-1000px)"});
-                count = 1;
-            });
-            $buttons.eq(2).on("click", () => {
-                if(count === 0) {
-                    $slides.css({transform: "translateX(0px)"}).one("transitionend", () => {
-                        $slides.hide().offset();
-                        $slides.css({transform: "translateX(-1500px)"}).show();
-                    });
-                } else {
-                    $slides.css({transform: "translateX(-1500px)"});
-                }
-                count = 2;
-            });
+
+            // $buttons.eq(0).on("click", () => {
+            //     if(current === 2) {
+            //         $slides.css({transform: "translateX(-2000px)"}).one("transitionend", () => {
+            //             $slides.hide().offset();
+            //             $slides.css({transform: "translateX(-500px)"}).show();
+            //         });
+            //     } else {
+            //         $slides.css({transform: "translateX(-500px)"});
+            //     }
+            //     current = 0;
+            // });
+            // $buttons.eq(1).on("click", () => {
+            //     $slides.css({transform: "translateX(-1000px)"});
+            //     current = 1;
+            // });
+            // $buttons.eq(2).on("click", () => {
+            //     if(current === 0) {
+            //         $slides.css({transform: "translateX(0px)"}).one("transitionend", () => {
+            //             $slides.hide().offset();
+            //             $slides.css({transform: "translateX(-1500px)"}).show();
+            //         });
+            //     } else {
+            //         $slides.css({transform: "translateX(-1500px)"});
+            //     }
+            //     current = 2;
+            // });
         }
     </script>
 </body>
