--- a/033/carousel.html
+++ b/033/carousel.html
@@ -72,7 +72,7 @@
             <button>3</button>
         </div>
     </div>
-    <div class="switch">
+    <div class="switch" id="switch">
         <svg class="icon" aria-hidden="true" id="previous">
             <use xlink:href="#icon-left"></use>
         </svg>
@@ -92,6 +92,7 @@
         $slides.css({transform: "translateX(-500px)"});
         bindEvents();
 
+        
 
         function makeImgs() {
             let $imgs = $slides.children("img");
@@ -106,48 +107,37 @@
             $("#btns").on("click", "button", (e) => {
                 let $btn = $(e.currentTarget);
                 let index = $btn.index();
-                if(current === 0 && index === $buttons.length - 1) {   //first -> last
-                    $slides.css({transform: `translateX(0px)`}).one("transitionend", () => {
-                        $slides.hide().offset();
-                        $slides.css({transform: `translateX(${-($buttons.length) * 500}px)`}).show();
-                    });
-                } else if(current === $buttons.length - 1 && index === 0) {   //  last -> first
-                    $slides.css({transform: `translateX(${-($buttons.length + 1) * 500}px)`}).one("transitionend", (e) => {
-                        $slides.hide().offset();
-                        $slides.css({transform: "translateX(-500px)"}).show();
-                    });
-                } else {
-                    $slides.css({transform: `translateX(${-(index + 1) * 500}px)`});
-                }
-                current = index;
+                changeSlide(index);
             });
+            $("#switch").on("click", "svg", (e) => {
+                if($(e.currentTarget).index() === 0) {
+                    changeSlide(current - 1);
+                } else {
+                    changeSlide(current + 1);
+                }
+            });
+        }
 
-            // $buttons.eq(0).on("click", () => {
-            //     if(current === 2) {
-            //         $slides.css({transform: "translateX(-2000px)"}).one("transitionend", () => {
-            //             $slides.hide().offset();
-            //             $slides.css({transform: "translateX(-500px)"}).show();
-            //         });
-            //     } else {
-            //         $slides.css({transform: "translateX(-500px)"});
-            //     }
-            //     current = 0;
-            // });
-            // $buttons.eq(1).on("click", () => {
-            //     $slides.css({transform: "translateX(-1000px)"});
-            //     current = 1;
-            // });
-            // $buttons.eq(2).on("click", () => {
-            //     if(current === 0) {
-            //         $slides.css({transform: "translateX(0px)"}).one("transitionend", () => {
-            //             $slides.hide().offset();
-            //             $slides.css({transform: "translateX(-1500px)"}).show();
-            //         });
-            //     } else {
-            //         $slides.css({transform: "translateX(-1500px)"});
-            //     }
-            //     current = 2;
-            // });
+        function changeSlide(index) {
+            if(index < 0) {
+                index = $buttons.length -1;
+            } else if(index > $buttons.length - 1) {
+                index = 0
+            }
+            if(current === 0 && index === $buttons.length - 1) {   //first -> last
+                $slides.css({transform: `translateX(0px)`}).one("transitionend", () => {
+                    $slides.hide().offset();
+                    $slides.css({transform: `translateX(${-(index + 1) * 500}px)`}).show();
+                });
+            } else if(current === $buttons.length - 1 && index === 0) {   //  last -> first
+                $slides.css({transform: `translateX(${-($buttons.length + 1) * 500}px)`}).one("transitionend", (e) => {
+                    $slides.hide().offset();
+                    $slides.css({transform: `translateX(-500px)`}).show();
+                });
+            } else {
+                $slides.css({transform: `translateX(${-(index + 1) * 500}px)`});
+            }
+            current = index;
         }
     </script>
 </body>
