--- a/042/index.html
+++ b/042/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/png">
     <link rel="stylesheet" href="vendor/prism.css">
     <link rel="stylesheet" href="default.css">
     <style id="addStyle"></style>
 </head>
 <body>
-    
     <main>
         <pre contenteditable id="prompt"></pre>
     </main>
