--- a/042/index.html
+++ b/042/index.html
@@ -14,6 +14,7 @@
     </main>
 
     <script src="vendor/prism.js"></script>
+    <script src="vendor/marked.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
