--- a/043/pikachu.html
+++ b/043/pikachu.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icons/pika.png" type="image/png">
     <title>Pikachu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="pikachu">
+        <div class="nose"></div>
+        <div class="eye right"></div>
+        <div class="eye left"></div>
+        <div class="face right"></div>
+        <div class="face left"></div>
+        <div class="upperlips right"></div>
+        <div class="upperlips left"></div>
+        <div class="mouth">
+            <div class="tongue"></div>
+        </div>
+    </div>
 </body>
 </html>
