--- a/044-045/sign_up.html
+++ b/044-045/sign_up.html
@@ -2,9 +2,56 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>注册</title>
+    <style>
+        * {padding: 0; margin: 0; box-sizing: border-box; }
+        body { height: 100vh; display: flex; justify-content: center; align-items: center; }
+        .form-wrapper { border: 2px solid #ddd; padding: 60px; }
+        .form-wrapper > h1 { text-align: center; }
+        .form-wrapper > form > div > label { display: inline-block; min-width: 4em; }
+    </style>
 </head>
 <body>
-    <p>hello</p>
+    <div class="form-wrapper">
+        <h1>注册</h1>
+        <form method="POST" id="signUpForm">
+            <div>
+                <label for="email">邮箱</label>
+                <input type="email" name="email">
+            </div>
+            <div>
+                <label for="password1">密码</label>
+                <input type="password" name="password">
+            </div>
+            <div>
+                <label for="password_confirm">确认密码</label>
+                <input type="password" name="password_confirm">
+            </div>
+            <div>
+                <input type="submit" value="注册">
+            </div>
+        </form>
+    </div>
+
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        const form = $('#signUpForm');
+        const hash = {};
+        form.on('submit', (e) => {
+            e.preventDefault();
+            let name = ['email', 'password', 'password_confirm'];
+            name.forEach((name) => {
+                let value = form.find(`[name=${name}]`).val();
+                hash[name] = value;
+            });
+            $.post('/sign_up', hash).then((response) => {
+                console.log(response);
+            }, (request) => {
+                if (request.responseText) {
+                    alert('Error!');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
