--- a/049/index.html
+++ b/049/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Virtual DOM</title>
 </head>
 <body>
-    <div id="root"></div>
+    
+    <script src="./v_dom.js"></script>
 </body>
 </html>
